# Math

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
Testing/Temporary/: CTestCostData.txt
include/: Degree.hpp  Quaternion.hpp  Radian.hpp  Vector3.hpp
libMath/: CMakeLists.txt
libMath/include/: Degree.hpp
libMath/src/: Degree.cpp  Vector3.cpp
src/: Degree.cpp  Quaternion.cpp  Radian.cpp  Vector3.cpp
test/: CMakeLists.txt  TestDegree.cpp  TestQuaternion.cpp  TestVector3.cpp
test/TestMath/: CMakeLists.txt
test/src/: CMakeLists.txt  TestDegree.cpp  TestQuaternion.cpp  TestVector3.cpp
